fixing the alignments

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -251,7 +251,8 @@ footer img {
 	footer img {
 	    padding-top:10px
 	}
-	footer .text-right{
+	footer .text-right,
+	footer .text-left{
 		text-align:center !important
 	}
 }
